--- a/website/docs/week-01/classical-mechanics.mdx
+++ b/website/docs/week-01/classical-mechanics.mdx
@@ -5,7 +5,17 @@ title: Classical Mechanics
 hide_title: true
 ---
 
-:::caution
-Coming soon.
-:::
+import NotebookEmbed from '@site/src/components//WolframEmbedder.js'
+import NotebookViewer from '@site/src/components/NotebookViewer.js'
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs lazy>
+  <TabItem value="wl-ipynb" label="Wolfram Language - Jupyter" default>
+  </TabItem>
+  <TabItem value="wl-nb" label="Wolfram Language">
+    <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L01__classical-mechanics-intro__01-31-22.nb"/>
+  </TabItem>
+</Tabs>
 
