inline rendering test

--- a/website/docs/week-01/classical-mechanics.mdx
+++ b/website/docs/week-01/classical-mechanics.mdx
@@ -12,7 +12,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 <Tabs lazy>
-  <TabItem value="wl-ipynb" label="Wolfram Language - Jupyter" default>
+    <TabItem value="wl-ipynb" label="Wolfram Language - Jupyter" default>
+    <NotebookViewer notebookURL="https://github.com/dmse-mit/3029/blob/main/lecture-notebooks/L01__classical-mechanics-intro__01-31-22.ipynb" />
   </TabItem>
   <TabItem value="wl-nb" label="Wolfram Language">
     <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L01__classical-mechanics-intro__01-31-22.nb"/>
