--- a/website/announcements/2022-01-30-welcome.md
+++ b/website/announcements/2022-01-30-welcome.md
@@ -15,7 +15,7 @@ Our first lecture will take place tomorrow (Monday, 01/31) 1:00pm-2:30pm in room
 
 - We will be piloting a custom web-based platform to deliver the lecture and reading notebooks for the class, which you can access here: https://dmse-mit.github.io/3029/. Feel free to peruse the site, but we will also spend some time navigating it together tomorrow.
 
-- We will reserve [canvas](https://canvas.mit.edu/courses/13469) use for i) class-wide announcements, ii) acessing the zoom recordings, and iii) submitting/grading of assignments.
+- We will reserve [canvas](https://canvas.mit.edu/courses/13469) use for i) class-wide announcements, ii) accessing the zoom recordings, and iii) submitting/grading of assignments.
 
 - Finally, we have set up a [Slack workspace](https://mit-3029-sp22.slack.com) for the class for interactions outside the regularly-scheduled lecture and office hours. You should be receiving an invite to join from me shortly.
 
