added week 02 scaffold

--- a/website/docs/week-01/reading-rigid-body-dynamics.mdx
+++ b/website/docs/week-01/reading-rigid-body-dynamics.mdx
@@ -1,7 +1,7 @@
 ---
-id: 1d-lattice-dynamics
+id: rigid-body-dymanics
 sidebar_position: 3
-title: 1D Lattice Dynamics
+title: (R) Rigid Body Dynamics
 hide_title: true
 ---
 
