--- a/website/docs/week-02/1d-lattice-dynamics.mdx
+++ b/website/docs/week-02/1d-lattice-dynamics.mdx
@@ -10,8 +10,24 @@ import NotebookViewer from '@site/src/components/NotebookViewer.js'
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import Link from '@docusaurus/Link';
 
-:::caution
-Coming soon.
-:::
+<Tabs lazy>
+
+  <TabItem value="wl-ipynb" label="Wolfram Language - Jupyter">
+    <NotebookViewer notebookURL="https://github.com/dmse-mit/3029/blob/main/lecture-notebooks/L03__1d-lattice-dynamics__02-07-22.ipynb" />
+  </TabItem>
+
+  <TabItem value="wl-nb" label="Wolfram Language" default>
+  
+      <Link
+        className="button button--secondary"
+        to="https://raw.githubusercontent.com/dmse-mit/3029/main/lecture-notebooks/L03__1d-lattice-dynamics__02-07-22.nb">
+        Download Notebook!
+      </Link>
+    <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L03__1d-lattice-dynamics__02-07-22.nb"/>
+
+  </TabItem>
+
+</Tabs>
 
