md lecture skeleton

--- a/website/docs/week-07/molecular-dynamics.mdx
+++ b/website/docs/week-07/molecular-dynamics.mdx
@@ -1,7 +1,7 @@
 ---
-id: step-growth-polymerization
-sidebar_position: 2
-title: Step-Growth Polymerization
+id: molecular-dynamics
+sidebar_position: 1
+title: Molecular Dynamics
 hide_title: true
 ---
 
@@ -15,17 +15,17 @@ import Link from '@docusaurus/Link';
 <Tabs lazy>
 
   <TabItem value="wl-ipynb" label="Wolfram Language - Jupyter">
-    <NotebookViewer notebookURL="https://github.com/dmse-mit/3029/blob/main/lecture-notebooks/L12__step-growth-polymerization__03-09-22.ipynb" />
+    <NotebookViewer notebookURL="https://github.com/dmse-mit/3029/blob/main/lecture-notebooks/L13__molecular-dynamics__03-14-22.ipynb" />
   </TabItem>
 
   <TabItem value="wl-nb" label="Wolfram Language" default>
   
       <Link
         className="button button--secondary"
-        to="https://raw.githubusercontent.com/dmse-mit/3029/main/lecture-notebooks/L12__step-growth-polymerization__03-09-22.nb">
+        to="https://raw.githubusercontent.com/dmse-mit/3029/main/lecture-notebooks/L13__molecular-dynamics__03-14-22.nb">
         Download Notebook!
       </Link>
-    <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L12__step-growth-polymerization__03-09-22.nb"/>
+    <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L13__molecular-dynamics__03-14-22.nb"/>
 
   </TabItem>
 
