--- a/website/docs/week-12/order-disorder-transformation.mdx
+++ b/website/docs/week-12/order-disorder-transformation.mdx
@@ -1,7 +1,7 @@
 ---
-id: order-disorder-transition
+id: order-disorder-transformation
 sidebar_position: 1
-title: Order Disorder Transition
+title: Order Disorder Transformation
 hide_title: true
 ---
 
