--- a/website/docs/week-12/fourier-series-epicycles.mdx
+++ b/website/docs/week-12/fourier-series-epicycles.mdx
@@ -1,7 +1,7 @@
 ---
 id: fourier-series-epicycles
-sidebar_position: 1
-title: Fourier Series
+sidebar_position: 2
+title: Fourier Series Fun
 hide_title: true
 ---
 
@@ -15,7 +15,7 @@ import Link from '@docusaurus/Link';
 <Tabs lazy>
 
   <TabItem value="wl-ipynb" label="Wolfram Language - Jupyter">
-    <NotebookViewer notebookURL="https://github.com/dmse-mit/3029/blob/main/lecture-notebooks/L22__order-disorder-transition__04-25-22.ipynb" />
+    <NotebookViewer notebookURL="https://github.com/dmse-mit/3029/blob/main/lecture-notebooks/L23__fourier-transforms-in-materials-science__04-27-22.ipynb" />
   </TabItem>
 
   <TabItem value="wl-nb" label="Wolfram Language" default>
