--- a/website/docs/week-13/diffraction-imaging.mdx
+++ b/website/docs/week-13/diffraction-imaging.mdx
@@ -22,10 +22,10 @@ import Link from '@docusaurus/Link';
   
       <Link
         className="button button--secondary"
-        to="https://raw.githubusercontent.com/dmse-mit/3029/main/lecture-notebooks/L24 __diffraction-and-imaging__ 05-02-22.nb">
+        to="https://raw.githubusercontent.com/dmse-mit/3029/main/lecture-notebooks/L24 __diffraction-and-imaging__05-02-22.nb">
         Download Notebook!
       </Link>
-    <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L24 __diffraction-and-imaging__ 05-02-22.nb"/>
+    <NotebookEmbed url="https://www.wolframcloud.com/obj/gvarnavi/Published/3029-SP22__L24 __diffraction-and-imaging__05-02-22.nb"/>
 
   </TabItem>
 
